# QuantKit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: README.md
src/: bcb-historical-data.py  bcb-market-expectations.py  drawdown.py  lmp-method-backtest.py  ma-method-backtest.py  markowitz-optimization.py  portfolio-backtest.py  utils.py  value-at-risk.py
src/market_data/: __init__.py  bcb_historical_data.py  bcb_market_expectations.py  utils.py
src/portfolio_analysis/: __init__.py  drawdown.py  markowitz_optimization.py  portfolio_backtest.py  utils.py  value_at_risk.py
src/strategies/: bollinger.py  moving_average.py  relative_momentum.py  utils.py
src/strategy_backtests/: bollinger_bands_strategy.py  lmp_method_backtest.py  lmp_strategy.py  ma_method_backtest.py  ma_strategy.py
